update versions
