# internal/provider/file_resource.go
@@ -44,6 +44,7 @@ type FileResourceModel struct {
 	MimeType          types.String       `tfsdk:"mime_type"`
 	Org               types.String       `tfsdk:"org"`
 	PublicURL         types.String       `tfsdk:"public_url"`
+	Purpose           []types.String     `tfsdk:"purpose"`
 	ReadableSize      types.String       `tfsdk:"readable_size"`
 	S3ref             *tfTypes.S3Ref     `tfsdk:"s3ref"`
 	Schema            types.String       `tfsdk:"schema"`
@@ -124,6 +125,11 @@ func (r *FileResource) Schema(ctx context.Context, req resource.SchemaRequest, r
 			"public_url": schema.StringAttribute{
 				Computed:    true,
 				Description: `Direct URL for file (public only if file access control is public-read)`,
+			},
+			"purpose": schema.ListAttribute{
+				Computed:    true,
+				Optional:    true,
+				ElementType: types.StringType,
 			},
 			"readable_size": schema.StringAttribute{
 				Computed:    true,
